--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="container my-5">
             <div class="row p-4 pb-0 pe-lg-0 pt-lg-0 align-items-center rounded-3 border shadow-lg ">
                 <div class="col-lg-7 p-3 p-lg-3 pt-lg-1">
-                    <h1 class="display-6 fw-bold lh-1">Revolutionize your teaching-Team AMP</h1>
+                    <h1 class="display-6 fw-bold lh-1">Revolutionize Your Teaching-Team AMP</h1>
                     <p class="lead">Empower your students with cutting-edge software engineering skills. Join
                         MyWebClass and discover advanced technologies that will transform your teaching and their
                         learning journey.</p>
