--- a/index_original_code.html
+++ b/index_original_code.html
@@ -11,8 +11,8 @@
 
     <!--Basic meta info -->
     <meta name="keywords" content="My Webclass Homepage">
-    <meta name="author" content="Avneet Singh Michael Ellis Pil Jang"/>
-    <meta name="description" content="A project to help educators integrate new technologies into their teaching">
+    <meta name="author" content="Keith Williams"/>
+    <meta name="des2cription" content="A project to help educators integrate new technoliges into their teaching">
 
     <!--OpenGraph meta -->
     <meta property="og:title" content=""/>
@@ -48,7 +48,7 @@
         <div class="container my-5">
             <div class="row p-4 pb-0 pe-lg-0 pt-lg-0 align-items-center rounded-3 border shadow-lg ">
                 <div class="col-lg-7 p-3 p-lg-3 pt-lg-1">
-                    <h1 class="display-6 fw-bold lh-1">Revolutionize Your Teaching-Team AMP</h1>
+                    <h1 class="display-6 fw-bold lh-1"> Title is: </h1>
                     <p class="lead">Empower your students with cutting-edge software engineering skills. Join
                         MyWebClass and discover advanced technologies that will transform your teaching and their
                         learning journey.</p>
