--- a/privacy_original_code.html
+++ b/privacy_original_code.html
@@ -71,45 +71,39 @@
             <main class="col-md-9 ms-sm-auto col-lg-9 px-md-4">
 
                 <h1 class="fw-bold border-bottom" id="title">Privacy Policy</h1>
-                <div class="text-muted mb-3 ">By Avneet, Michael, and Pil</a><span class="text-muted me-3"> Last Updated:
-              March 19, 2023</span> <span class="text-muted" id="readingTime">0</span>
+                <div class="text-muted mb-3 ">By <a href="#">Author Name</a><span class="text-muted me-3"> Last Updated:
+              January 1, 2022</span> <span class="text-muted" id="readingTime">0</span>
                 </div>
                 <section class="row">
                     <h1>Privacy Policy</h1>
 
-                    <p>At MyWebClass.org, we are dedicated to preserving your privacy. Our Privacy Policy specifies
-                        the type of information we collect from you when you visit our website, how we use it, and
-                        the precautions we take to safeguard it. Your use of our website indicates your agreement
-                        with the terms set out in this Privacy Policy. Users have the right to opt-out of having their
-                        personal data collected or used.</p>
-                    <h2>Information We Collect</h2>
-                    <p><u>We may collect the following information from you when you visit our website</u>:</p>
+                    <p>We at mywebclass.org are committed to protecting your privacy. This Privacy Policy explains what
+                        information we collect from you when you visit our website, how we use it, and how we protect
+                        it. By using our website, you agree to the terms of this Privacy Policy.</p>
+                    <h2>Information we collect</h2>
+                    <p>We may collect the following information from you when you visit our website:</p>
                     <ul>
-                        <li>
-                            <!--Item 1-->Your personal information, like your email address and name, if you decide to share it with us.
+                        <li>Personal information such as your name and email address, if you choose to provide it to
+                            us.
                         </li>
-                        <li>
-                            <!--Item 2-->Details about how you use the website, such as the pages you visit, the length of time you spend on the site, and the links you click.
+                        <li>Information about your use of the website, such as pages visited, time spent on the site,
+                            and links clicked.
                         </li>
-                        <li>
-                            <!--Item 3-->Information about your device, like your IP address, browser type, and operating system.
+                        <li>Information about your device, such as your IP address, browser type, and operating
+                            system.
                         </li>
                     </ul>
-                    <h2>How We Use Your Information</h2>
-                    <p><u>We use the information we collect from you for the following purposes</u>:</p>
+                    <h2>How we use your information</h2>
+                    <p>We use the information we collect from you for the following purposes:</p>
                     <ul>
-                        <li>
-                            <!--Item 1-->Enhancing our website and optimizing the user experience.
+                        <li>To improve our website and the user experience.</li>
+                        <li>To analyze user behavior and measure the effectiveness of our content and marketing
+                            efforts.
                         </li>
-                        <li>
-                            <!--Item 2-->Analyzing user behavior and measure the effectiveness of our content and marketing efforts.
+                        <li>To communicate with you about our products and services, if you have provided us with your
+                            contact information.
                         </li>
-                        <li>
-                            <!--Item 3-->Communicating with users about our products and services, if you have provided us with your contact information into our system.
-                        </li>
-                        <li>
-                            <!--Item 4-->Adhering to legal obligations.
-                        </li>
+                        <li>To comply with legal obligations.</li>
                     </ul>
                     <h2>Google Analytics</h2>
                     <p>We use Google Analytics to collect information about your use of our website. Google Analytics
