--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>MyWebClass.org</title>
     <meta charset="UTF-8">
 
+    <meta http-equiv="refresh" content="0;URL=/site/src/index.html">
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!--Basic meta info -->
