--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>MyWebClass.org</title>
     <meta charset="UTF-8">
 
-    <meta http-equiv="refresh" content="0;URL=/index.html">
+    <meta http-equiv="refresh" content="0;URL=/mywebclass-simulation/src/index.html">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
