--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
     <!--characterset UTF-8 Watch this: https://youtu.be/MijmeoH9LT4 -->
 
-    <title>MyWebbClass.org</title>
+    <title>MyWebClass.org</title>
     <meta charset="UTF-8">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -48,7 +48,7 @@
         <div class="container my-5">
             <div class="row p-4 pb-0 pe-lg-0 pt-lg-0 align-items-center rounded-3 border shadow-lg ">
                 <div class="col-lg-7 p-3 p-lg-3 pt-lg-1">
-                    <h1 class="display-6 fw-bold lh-1"> Title is: </h1>
+                    <h1 class="display-6 fw-bold lh-1"> Pil Avneet Mike: </h1>
                     <p class="lead">Empower your students with cutting-edge software engineering skills. Join
                         MyWebClass and discover advanced technologies that will transform your teaching and their
                         learning journey.</p>
