--- a/src/privacy.html
+++ b/src/privacy.html
@@ -4,15 +4,15 @@
 <head>
     <!--characterset UTF-8 Watch this: https://youtu.be/MijmeoH9LT4 -->
 
-    <title>MyWebClass.org | Our Story</title>
+    <title>MyWebClass.org | Privacy Policy</title>
     <meta charset="UTF-8">
 
     <meta content="width=device-width, initial-scale=1" name="viewport">
 
     <!--Basic meta info -->
-    <meta content="My Webclass Homepage | Our Story" name="keywords">
+    <meta content="My Webclass Homepage | Privacy Policy" name="keywords">
     <meta content="Keith Williams" name="author"/>
-    <meta content="The story and mission of MyWebClass.org" name="description">
+    <meta content="A project to provide educational resources to web development teachers" name="description">
 
     <!--OpenGraph meta -->
     <meta content="" property="og:title"/>
@@ -27,8 +27,7 @@
         <nav aria-label="Main navigation" class="navbar navbar-expand-lg navbar-dark bg-dark " role="navigation">
             <div class="container">
                 <a class="navbar-brand" href="/">MyWebClass.org</a>
-                <button aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation"
-                        class="navbar-toggler"
+                <button aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"
                         data-bs-target="#navbarCollapse" data-bs-toggle="collapse" type="button">
                     <span aria-hidden="true" class="navbar-toggler-icon"></span>
                     <span class="visually-hidden">Toggle navigation</span>
@@ -59,8 +58,8 @@
 
     <div class="container">
         <div class="row">
-            <!-- Sidebar menu with scrollspy -->
-            <nav class="col-md-2 col-lg-2 d-md-block bg-light sidebar collapse position-fixed" id="sidebarMenu">
+            <!-- Table of Contents (TOC) menu with scrollspy -->
+            <nav class="col-md-2 col-lg-2 d-md-block bg-light sidebar collapse position-fixed" id="toc_menu">
                 <div class="position-sticky pt-3">
                     <h2 class="justify-left">Navigation</h2>
                     <!-- Javascript builds out the navigation items -->
@@ -69,20 +68,25 @@
 
             <!-- Main content area -->
             <main class="col-md-9 ms-sm-auto col-lg-9 px-md-4">
+                <section id="section1">
+                    <h1 class="fw-bold border-bottom">Privacy Policy</h1>
+                    <div class="text-muted mb-3 ">By Pil, Avneet, and Mike<span class="text-muted me-3"> / Last Updated:
+                March 22, 2023</span> <span class="text-muted" id="readingTime">0</span>
+                    </div>
+                </section>
 
-                <h1 class="fw-bold border-bottom" id="title">Privacy Policy</h1>
-                <div class="text-muted mb-3 ">By Avneet, Michael, and Pil</a><span class="text-muted me-3"> Last Updated:
-              March 19, 2023</span> <span class="text-muted" id="readingTime">0</span>
-                </div>
-                <section class="row">
-                    <h1>Privacy Policy</h1>
-
+                <section id="section2">
+                    <h2>Privacy Policy</h2>
                     <p>At MyWebClass.org, we are dedicated to preserving your privacy. Our Privacy Policy specifies
                         the type of information we collect from you when you visit our website, how we use it, and
                         the precautions we take to safeguard it. Your use of our website indicates your agreement
                         with the terms set out in this Privacy Policy. Users have the right to opt-out of having their
-                        personal data collected or used.</p>
-                    <h2>Information We Collect</h2>
+                        personal data collected or used.
+                    </p>
+                </section>
+
+                <section id="section3">
+                    <h2>Info Collected</h2>
                     <p><u>We may collect the following information from you when you visit our website</u>:</p>
                     <ul>
                         <li>
@@ -95,7 +99,10 @@
                             <!--Item 3-->Information about your device, like your IP address, browser type, and operating system.
                         </li>
                     </ul>
-                    <h2>How We Use Your Information</h2>
+                </section>
+
+                <section id="section4">
+                    <h2>How We Use Your Info</h2>
                     <p><u>We use the information we collect from you for the following purposes</u>:</p>
                     <ul>
                         <li>
@@ -111,7 +118,10 @@
                             <!--Item 4-->Adhering to legal obligations.
                         </li>
                     </ul>
-                    <h2>Google Analytics</h2>
+                </section>
+
+                <section id="section5">
+                <h2>Google Analytics</h2>
                     <p>We use Google Analytics to collect information about your use of our website. Google Analytics
                         collects information such as how often users visit the site, what pages they visit when they do
                         so, and what other sites they used prior to coming to our website. We use the information we get
@@ -123,33 +133,31 @@
                         This cookie cannot be used by anyone other than Google. Google’s ability to use and share
                         information collected by Google Analytics about your visits to our website is restricted by the
                         Google Analytics Terms of Use and the Google Privacy Policy.</p>
-                    <h2>Data retention and security</h2>
+                </section>
+
+                <section id="section6">
+                    <h2>Data Retention and Security</h2>
                     <p>We retain the information we collect for as long as necessary to fulfill the purposes for which
                         it was collected, unless a longer retention period is required by law. We take reasonable
                         measures to protect the information we collect from loss, theft, misuse, and unauthorized
                         access, disclosure, alteration, and destruction.</p>
-                    <h2>Data retention and security</h2>
-                    <p>We retain the information we collect for as long as necessary to fulfill the purposes for which
-                        it was collected, unless a longer retention period is required by law. We take reasonable
-                        measures to protect the information we collect from loss, theft, misuse, and unauthorized
-                        access, disclosure, alteration, and destruction.</p>
-                    <h2>Your rights</h2>
-                    <p>You have the right to access, correct, and delete your personal information. You also have the
-                        right to object to the processing of your personal information and to withdraw your consent to
-                        the processing of your personal information. To exercise these rights, please contact us at
-                        [contact email address].</p>
+                </section>
+
+                <section id="section7">
                     <h2>Changes to this Privacy Policy</h2>
                     <p>We may update this Privacy Policy from time to time. We will notify you of any changes by posting
                         the new Privacy Policy on this page. We recommend that you review this Privacy Policy
                         periodically for any changes.</p>
+                </section>
+
+                    <section id="section8">
                     <h2>Contact us</h2>
                     <p>If you have any questions about this Privacy Policy, please contact us at [contact email
                         address].</p>
+                    </section>
 
-                </section>
 
-
-            </main>
+                </main>
         </div>
         <footer class="py-5 container">
             <div class="row">
@@ -161,10 +169,8 @@
                             Story</a>
                         </li>
 
-                        <a aria-current="page" class="nav-link mb-2 p-0 text-muted active" href="privacy.html">Privacy
-                            Policy</a>
-                        </li>
-                    </ul>
+                        <a aria-current="page" class="nav-link mb-2 p-0 text-muted active" href="privacy.html">Privacy Policy</a>
+                        </ul>
                 </div>
 
                 <div class="col-sm-3 ">
