--- a/src/privacy.html
+++ b/src/privacy.html
@@ -47,7 +47,7 @@
                 <div class="row align-items-center">
                     <div class="col-auto text-start">
                         <ol class="breadcrumb my-0">
-                            <li class="breadcrumb-item"><a href="/">Home</a></li>
+                            <li class="breadcrumb-item"><a href="http://localhost:3000/">Home</a></li>
                             <li aria-current="page" class="breadcrumb-item active">Content Template</li>
                         </ol>
                     </div>
@@ -165,11 +165,10 @@
                     <h1>About Us</h1>
                     <ul class="nav flex-column">
                         <li class="nav-item">
-                        <li class="nav-item mb-2"><a class="nav-link p-0 text-muted" href="story.html">Our
-                            Story</a>
+                        <li class="nav-item mb-2"><a class="nav-link p-0 text-muted" href="http://localhost:3000/story.html">Our Story</a>
                         </li>
 
-                        <a aria-current="page" class="nav-link mb-2 p-0 text-muted active" href="privacy.html">Privacy Policy</a>
+                        <a aria-current="page" class="nav-link mb-2 p-0 text-muted active" href="http://localhost:3000/privacy.html">Privacy Policy</a>
                         </ul>
                 </div>
 
