--- a/src/privacy.html
+++ b/src/privacy.html
@@ -11,7 +11,7 @@
 
     <!--Basic meta info -->
     <meta content="My Webclass Homepage | Privacy Policy" name="keywords">
-    <meta content="Keith Williams" name="author"/>
+    <meta content="Michael Ellis, Pil Jang, Avneet Singh" name="author"/>
     <meta content="A project to provide educational resources to web development teachers" name="description">
 
     <!--OpenGraph meta -->
@@ -70,32 +70,39 @@
             <main class="col-md-9 ms-sm-auto col-lg-9 px-md-4">
                     <h1 class="fw-bold border-bottom">Privacy Policy</h1>
                     <div class="text-muted mb-3 ">By Pil, Avneet, and Mike<span class="text-muted me-3"> / Last Updated:
-                March 22, 2023</span> <span class="text-muted" id="readingTime">0</span>
+                March 25, 2023</span> <span class="text-muted" id="readingTime">0</span>
                     </div>
                 </section>
 
                 <section id="section1">
                     <h2>Privacy Policy</h2>
-                    <p>At MyWebClass.org, we are dedicated to preserving your privacy. Our Privacy Policy specifies
-                        the type of information we collect from you when you visit our website, how we use it, and
-                        the precautions we take to safeguard it. Your use of our website indicates your agreement
-                        with the terms set out in this Privacy Policy. Users have the right to opt-out of having their
-                        personal data collected or used.
+                    <p>At MyWebClass.org, we are dedicated to preserving your privacy. [Insert your company name]
+                        ("us", "we", or "our") operates (https://mdellis73.github.io/mywebclass-simulation/privacy.html)
+                        (the "Site"). This page informs you of our policies regarding the collection, use, and
+                        disclosure of Personal Information we receive from users of the Site.</p>
+
+                        <p>We use your Personal Information only for providing and improving the Site. By using the Site,
+                        you agree to the collection and use of information in accordance with this policy.
                     </p>
                 </section>
 
                 <section id="section2">
                     <h2>Info Collected</h2>
-                    <p><u>We may collect the following information from you when you visit our website</u>:</p>
+                    <p><u>While using our Site, we may ask you to provide us with certain personally identifiable
+                        information that can be used to contact or identify you. Personally identifiable information may
+                        include, but is not limited to</u>:</p>
                     <ul>
                         <li>
-                            <!--Item 1-->Your personal information, like your email address and name, if you decide to share it with us.
+                            <!--Item 1-->Your personal information, like your email address and name, if you decide to
+                            share it with us.
                         </li>
                         <li>
-                            <!--Item 2-->Details about how you use the website, such as the pages you visit, the length of time you spend on the site, and the links you click.
+                            <!--Item 2-->Details about how you use the website, pages of our Site that you visit, the
+                            time and date of your visit, the time spent on those pages, and the links you click.
                         </li>
                         <li>
-                            <!--Item 3-->Information about your device, like your IP address, browser type, and operating system.
+                            <!--Item 3-->Information such as your computer's Internet Protocol ("IP") address, browser
+                            type and browser version.
                         </li>
                     </ul>
                 </section>
@@ -140,19 +147,37 @@
                         it was collected, unless a longer retention period is required by law. We take reasonable
                         measures to protect the information we collect from loss, theft, misuse, and unauthorized
                         access, disclosure, alteration, and destruction.</p>
+
+                    <p> The security of your Personal Information is important to us, but remember that no method of
+                    transmission over the Internet, or method of electronic storage, is 100% secure. While we strive to
+                    use commercially acceptable means to protect your Personal Information, we cannot guarantee its
+                    absolute security.</p>
                 </section>
 
                 <section id="section6">
+                    <h2>Cookies</h2>
+                    <p>Cookies are files with a small amount of data, which may include an anonymous unique identifier.
+                        Cookies are sent to your browser from a web site and stored on your computer's hard drive.</p>
+
+                    <p>Like many sites, we use "cookies" to collect information. You can instruct your browser to refuse
+                        all cookies or to indicate when a cookie is being sent. However, if you do not accept cookies,
+                        you may not be able to use some portions of our Site.</p>
+
+                <section id="section7">
                     <h2>Changes to this Privacy Policy</h2>
-                    <p>We may update this Privacy Policy from time to time. We will notify you of any changes by posting
-                        the new Privacy Policy on this page. We recommend that you review this Privacy Policy
-                        periodically for any changes.</p>
+                    <p>This Privacy Policy is effective as of the date listed above and will remain in effect except
+                        with respect to any changes in its provisions in the future, which will be in effect immediately
+                        after being posted on this page.</p>
+
+                    <p>We reserve the right to update or change our Privacy Policy at any time and you should check this
+                        Privacy Policy periodically. Your continued use of the Site after we post any modifications to
+                        the Privacy Policy on this page will constitute your acknowledgment of the modifications and your
+                        consent to abide and be bound by the modified Privacy Policy.</p>
                 </section>
 
-                    <section id="section7">
+                    <section id="section8">
                     <h2>Contact us</h2>
-                    <p>If you have any questions about this Privacy Policy, please contact us at [contact email
-                        address].</p>
+                    <p>If you have any questions about this Privacy Policy, please contact us at Pandora@purgatory.org.</p>
                     </section>
 
 
