--- a/src/privacy.html
+++ b/src/privacy.html
@@ -47,7 +47,7 @@
                 <div class="row align-items-center">
                     <div class="col-auto text-start">
                         <ol class="breadcrumb my-0">
-                            <li class="breadcrumb-item"><a href="http://localhost:3000/">Home</a></li>
+                            <li class="breadcrumb-item"><a href="/mywebclass-simulation/">Home</a></li>
                             <li aria-current="page" class="breadcrumb-item active">Content Template</li>
                         </ol>
                     </div>
